tests/machine/x/go/group_by_conditional_sum.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_conditional_sum.go:16:13: undefined: Item
../../../tests/machine/x/go/group_by_conditional_sum.go:20:5: undefined: Item
../../../tests/machine/x/go/group_by_conditional_sum.go:24:5: undefined: Item
../../../tests/machine/x/go/group_by_conditional_sum.go:29:21: undefined: Result
../../../tests/machine/x/go/group_by_conditional_sum.go:87:16: undefined: Result
../../../tests/machine/x/go/group_by_conditional_sum.go:89:30: undefined: Result

1: //go:build ignore
